@@ -3,6 +3,8 @@ ikiwiki (3.20161220) UNRELEASED; urgency=medium
   * Add CVE references for CVE-2016-10026
   * Add missing ikiwiki.setup for the manual test for CVE-2016-10026
   * git: don't issue a warning if the rcsinfo CGI parameter is undefined
+  * git: do not fail to commit changes with a recent git version
+    and an anonymous committer
 
  -- Simon McVittie <smcv@debian.org>  Wed, 21 Dec 2016 13:03:07 +0000
 
